<resources>
    <string name="app_name">CRMapp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CRMapp</string>
    <string name="nav_header_subtitle">crmapp@crmapp.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_aboutApp">About app</string>
    <string name="menu_crm">CRM</string>
    <string name="menu_info">Information</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="about_app_text">This is a mobile client for CRM. Simply displaying table with data from JSON server.</string>

    <string name="info_info">Information</string>
    <string name="about_app_name_label">NAME</string>
    <string name="about_app_name">CRMApp</string>
    <string name="about_app_version_name">Version</string>
    <string name="about_app_version">1.0</string>
    <string name="about_app_developer_name">Developer</string>
    <string name="about_app_developer">Evecon Corp.</string>
    <string name="about_app_tos">Terms of use</string>
</resources>
