<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_aboutApp">

    <fragment
        android:id="@+id/nav_aboutApp"
        android:name="co.evecon.crmapp.ui.aboutApp.AboutAppFragment"
        android:label="@string/menu_aboutApp"
        tools:layout="@layout/fragment_aboutapp" />

    <fragment
        android:id="@+id/nav_crm"
        android:name="co.evecon.crmapp.ui.crm.CRMFragment"
        android:label="@string/menu_crm"
        tools:layout="@layout/fragment_crm" />

    <fragment
        android:id="@+id/nav_info"
        android:name="co.evecon.crmapp.ui.info.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/nav_share"
        android:name="co.evecon.crmapp.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="co.evecon.crmapp.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>